Remove tesser.util/bytes?, which is now in clojure.core.